@@ -1,5 +1,3 @@
 .extern readATA
-.extern searchKernel
-.extern searchFile
 .extern readInodeBlock
 .extern print32
