@@ -116,6 +116,202 @@ getRam_loop:
   jne getRam_loop
   ret
 .code32
+KERN_FILENAME:
+  .asciz "kernel.elf"
+searchFile:
+  pushl %ebx
+  pushl %ecx
+  pushl %edx
+  pushl %esi
+  pushl %edi
+  movl $0x1C00, %ebx
+  movl $0x0, %edx
+  .loop_search_file:
+    movl (%ebx, %edx, 1), %eax
+    cmp $0, %eax
+    je .next_search_file
+    movzbl 6(%ebx, %edx, 1), %eax
+    cmp $10, %eax         # kernel.elf 10 bytes
+    jne .next_search_file
+    leal 8(%ebx, %edx, 1), %edi
+    leal KERN_FILENAME+0x7E00, %esi
+    movl $10, %ecx
+    repe cmpsb
+    cmp $0, %ecx
+    jne .next_search_file
+    movl (%ebx, %edx, 1), %eax
+    jmp .search_file_exit
+  .next_search_file:
+    movzwl 4(%ebx, %edx, 1), %eax
+    addl %eax, %edx
+    cmp $0x400, %edx
+    jl .loop_search_file
+
+  .search_file_end:
+  movl $0, %eax
+
+  .search_file_exit:
+  popl %edi
+  popl %esi
+  popl %edx
+  popl %ecx
+  popl %ebx
+  ret
+
+# =============================================================
+# searchKernel : search kernel.elf
+# =============================================================
+searchKernel:
+# Read superblock to 0x1000 and block descriptor table to 0x1400
+  movl $34, %ebx
+  movl $4, %ecx
+  movl $0x1000, %edi
+  call readATA
+
+# Read INODE Table to find root directory
+  movl 0x1408, %ebx
+  addl $16, %ebx
+  shll %ebx
+  movl $2, %ecx
+  movl $0x1800, %edi
+  call readATA
+
+# block number zero
+  movl $0x0, %ecx
+  jmp .read_next_root_block
+
+.searchKernel_Root_Block_Loop:
+  pushl %ecx
+  call searchFile
+  popl %ecx
+  cmp $0, %eax
+  jne .found_kernel_inode
+.read_next_root_block:
+  pushl %ecx
+  movl $32, %eax
+  pushl %eax
+
+  movl $1, %eax
+  pushl %eax
+
+  pushl %ecx
+
+  movl $0x1880, %eax # Root Inode Position
+  pushl %eax
+
+  movl $0x1c00, %eax
+  pushl %eax
+
+  call readInodeBlock
+
+  addl $20, %esp
+  popl %ecx
+  incl %ecx
+  test %eax, %eax
+  jnz .searchKernel_Root_Block_Loop
+.kernel_not_found:
+  movl $(0x7E00+.kernel_not_found_msg), %esi
+  call print32
+  hlt
+
+.kernel_not_found_msg:
+  .asciz "Kernel not found"
+.found_kernel_inode:
+  decl %eax
+  movl $0, %edx
+  divl 0x1000 + 40
+  shll $5, %eax
+  movl 0x1408(%eax), %ebx
+  addl $16, %ebx
+  movl %edx, %eax
+  xorl %edx, %edx
+  movl $8, %ecx
+  divl %ecx
+  addl %eax, %ebx
+  shll %ebx
+  movl $2, %ecx
+  movl $0x2000, %edi
+  call readATA
+  shll $7, %edx
+
+  pushl %edx
+  movl $32, %eax
+  pushl %eax
+
+  movl $1, %eax
+  pushl %eax
+
+  movl $0, %eax
+  pushl %eax
+
+  leal 0x2000(%edx), %eax
+  pushl %eax
+
+  movl $0x10000, %eax
+  pushl %eax
+  call readInodeBlock
+
+  addl $20, %esp
+  popl %edx
+
+  movzwl 0x10038, %ecx
+  movl 0x10020, %ebx          # Program header start position
+  leal 0x10000(%ebx), %ebx
+.load_elf_loop:
+  pushl %ecx
+  pushl %edx
+
+  movl (%ebx), %eax
+  cmp $1, %eax
+  je .load_elf
+  popl %edx
+  jmp .add_elf_header
+.load_elf:
+  movl $32, %eax
+  pushl %eax
+
+  movl 0x20(%ebx), %eax
+  test $0x3ff, %eax
+  jz .load_less
+  addl $0x400, %eax
+  .load_less:
+  shr $10, %eax
+  pushl %eax
+
+  movl 8(%ebx), %eax
+  shr $10, %eax
+  pushl %eax
+
+  leal 0x2000(%edx), %eax
+  pushl %eax
+
+  movl 0x10(%ebx), %eax
+  pushl %eax
+  call readInodeBlock
+
+  addl $20, %esp
+  popl %edx
+  movl 0x8(%ebx), %esi
+  andl $1023, %esi
+  
+  test %esi, %esi
+  
+  jz .add_elf_header
+  movl 0x8(%ebx), %esi
+  movl 0x10(%ebx), %edi
+  addl %edi, %esi
+  movl 0x20(%ebx), %ecx
+  rep movsb
+  .add_elf_header:
+
+  popl %ecx
+  addl $0x38, %ebx
+  loop .load_elf_loop
+
+  movl 0x10018, %eax
+  ret
+
+
 HELLO_MESSAGE:
 .asciz "Hello world!"
 PMODE_MESSAGE:
